--- a/osnaturais.html
+++ b/osnaturais.html
@@ -76,7 +76,7 @@ Ela nos ensina que amar é um ato de proteção, e que a ternura também é uma 
     </div>
 
     <div class="natural-card">
-      <img src="du-arte.png" alt="Du-Arte">
+      <img src="Du-Arte.png" alt="Du-Arte">
       <h3>🎨 Du-Arte</h3>
       <p>
     🖍️Du-Arte é um menino feliz, esforçado e inteligente, que enxerga o mundo como uma grande obra de arte.
@@ -136,3 +136,4 @@ Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbol
 
 </body>
 </html>
+
