--- a/osnaturais.html
+++ b/osnaturais.html
@@ -48,7 +48,7 @@
       <p>
        
 
-🌿 Santim, também conhecido como Satim, é um menino falastrão, doidim e cheio de energia! Muito alegre, ele chega espalhando sua energia bela e positiva, alegrando todos ao seu redor. Com seu jeitinho engraçadinho e espontâneo, conquista fácil quem o conhece.
+🌿 Santim é um menino falastrão, doidim e cheio de energia! Muito alegre, ele chega espalhando sua energia bela e positiva, alegrando todos ao seu redor. Com seu jeitinho engraçadinho e espontâneo, conquista fácil quem o conhece.
 
 Apesar de ser divertido e brincalhão, Santim é muito amoroso e tem um coração enorme. Ele não gosta de injustiça e, quando vê algo errado, não pensa duas vezes: fica bravo, toma atitude e defende o que é certo, sempre buscando ajudar o próximo.
 
@@ -76,7 +76,7 @@ Ela nos ensina que amar é um ato de proteção, e que a ternura também é uma 
     </div>
 
     <div class="natural-card">
-      <img src="Du-Arte.png" alt="Du-Arte">
+      <img src="duarte.png" alt="Du-Arte">
       <h3>🎨 Du-Arte</h3>
       <p>
     🖍️Du-Arte é um menino feliz, esforçado e inteligente, que enxerga o mundo como uma grande obra de arte.
@@ -136,4 +136,5 @@ Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbol
 
 </body>
 </html>
+
 
