--- a/osnaturais.html
+++ b/osnaturais.html
@@ -75,19 +75,21 @@ Ela nos ensina que amar é um ato de proteção, e que a ternura também é uma 
       </p>
     </div>
 
-    <div class="natural-card">
-      <img src="duarte.png" alt="Du-Arte">
-      <h3>🎨 Du-Arte</h3>
-      <p>
-    🖍️Du-Arte é um menino feliz, esforçado e inteligente, que enxerga o mundo como uma grande obra de arte.
-Seu sorriso nasce da criatividade e seu coração pulsa no ritmo da vida.
+<div class="natural-card">
+  <img src="duarte.png" alt="Du-Arte">
+  <h3>🎨 Du-Arte</h3>
+  <p>
+    🖍️ Du-Arte é um menino feliz, esforçado e inteligente, que enxerga o mundo como uma grande obra de arte.
+    Seu sorriso nasce da criatividade e seu coração pulsa no ritmo da vida.
 
-Ele ama a arte em todas as suas formas — a pintura, as cores, as histórias antigas e os saberes que atravessam gerações.
-É defensor de tudo que é natural, verdadeiro e antigo, pois acredita que o passado guarda lições preciosas para o futuro.
+    Ele ama a arte em todas as suas formas — a pintura, as cores, as histórias antigas e os saberes que atravessam gerações.
+    É defensor de tudo que é natural, verdadeiro e antigo, pois acredita que o passado guarda lições preciosas para o futuro.
 
-Mesmo jovem, Du-Arte carrega uma sabedoria rara, aprendida ao observar a natureza, respeitar o tempo das coisas e valorizar cada detalhe do mundo ao seu redor.
+    Mesmo jovem, Du-Arte carrega uma sabedoria rara, aprendida ao observar a natureza, respeitar o tempo das coisas e valorizar cada detalhe do mundo ao seu redor.
 
-Com seu espírito criativo, ele transforma cuidado em beleza e conhecimento em inspiração, mostrando que arte também é uma forma de proteger a vida.🐛🧩
+    Com seu espírito criativo, ele transforma cuidado em beleza e conhecimento em inspiração, mostrando que arte também é uma forma de proteger a vida. 🐛🧩
+  </p>
+</div>
 
     <div class="natural-card">
       <img src="dramastico.png" alt="Dramástico">
@@ -136,5 +138,6 @@ Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbol
 
 </body>
 </html>
+
 
 
