--- a/formulario.html
+++ b/formulario.html
@@ -43,9 +43,14 @@
             method="POST"
             style="max-width:600px;margin:30px auto;display:flex;flex-direction:column;gap:12px;">
 
+            <!-- Anti-spam -->
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_subject" value="Novo parceiro - Tomada de Decisão Sustentável">
 
+            <!-- Redirecionamento para página de obrigado -->
+            <input type="hidden" name="_next" value="https://tomada-de-decisao-sustentavel.github.io/Page-oficial/obrigado.html">
+
+            <!-- Campos do formulário -->
             <input type="text" name="nome" placeholder="Nome completo ou empresa" required>
             <input type="email" name="email" placeholder="Email" required>
             <input type="text" name="telefone" placeholder="Telefone / WhatsApp" required>
