--- a/formulario.html
+++ b/formulario.html
@@ -48,7 +48,7 @@
             <input type="hidden" name="_subject" value="Novo parceiro - Tomada de Decisão Sustentável">
 
             <!-- Redirecionamento para página de obrigado -->
-            <input type="hidden" name="_next" value="https://tomada-de-decisao-sustentavel.github.io/agradecimento.html">
+            <input type="hidden" name="_next" value="https://tomada-de-decisao-sustentavel.github.io/Page-oficial/agradecimento.html">
 
             <!-- Campos do formulário -->
             <input type="text" name="nome" placeholder="Nome completo ou empresa" required>
@@ -104,4 +104,5 @@
 
 </body>
 </html>
+
 
