--- a/agradecimento.html
+++ b/agradecimento.html
@@ -14,18 +14,18 @@
     <p>Recebemos seu cadastro de parceria. Entraremos em contato em breve!</p>
     
     <!-- Botão para voltar ao menu inicial -->
-<a href="https://tomada-de-decisao-sustentavel.github.io/Page-oficial/index.html"
-   style="
-     display:inline-block;
-     margin-top:20px;
-     padding:12px 25px;
-     background-color:#4CAF50;
-     color:#fff;
-     text-decoration:none;
-     border-radius:8px;
-   ">
-   Voltar ao Menu Inicial
+<a href="https://tomada-de-decisao-sustentavel.github.io/Page-oficial/index.html" style="
+    display:inline-block;
+    margin-top:20px;
+    padding:12px 25px;
+    background-color:#4CAF50;
+    color:#fff;
+    text-decoration:none;
+    border-radius:8px;
+">
+  Voltar ao Menu Inicial
 </a>
+
 
   </main>
   <footer>
@@ -33,4 +33,5 @@
   </footer>
 </body>
 </html>
+
 
