--- a/agradecimento.html
+++ b/agradecimento.html
@@ -6,28 +6,53 @@
   <title>Obrigado!</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
   <header>
     <h1>Obrigado pelo seu interesse! 🌱</h1>
   </header>
+
   <main style="text-align:center; padding:40px;">
     <p>Recebemos seu cadastro de parceria. Entraremos em contato em breve!</p>
-    
-    <!-- Botão para voltar ao menu inicial -->
-<a href="https://tomada-de-decisao-sustentavel.github.io/Page-oficial/index.html" style="
-    display:inline-block;
-    margin-top:20px;
-    padding:12px 25px;
-    background-color:#4CAF50;
-    color:#fff;
-    text-decoration:none;
-    border-radius:8px;
-">
-  Voltar ao Menu Inicial
-</a>
 
-
+    <a href="https://tomada-de-decisao-sustentavel.github.io/Page-oficial/index.html"
+       style="
+         display:inline-block;
+         margin-top:20px;
+         padding:12px 25px;
+         background-color:#4CAF50;
+         color:#fff;
+         text-decoration:none;
+         border-radius:8px;
+       ">
+       Voltar ao Menu Inicial
+    </a>
   </main>
+<script>
+    const menuToggle = document.getElementById('menu-toggle');
+    const menu = document.getElementById('menu');
+
+    menuToggle.addEventListener('click', () => {
+        const expanded = menuToggle.getAttribute('aria-expanded') === 'true';
+        menuToggle.setAttribute('aria-expanded', !expanded);
+        menu.classList.toggle('show');
+        menuToggle.classList.toggle('active');
+    });
+
+    menuToggle.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter' || e.key === ' ') {
+            e.preventDefault();
+            menuToggle.click();
+        }
+    });
+
+    const darkToggle = document.getElementById('dark-toggle');
+    darkToggle.addEventListener('click', () => {
+        document.body.classList.toggle('dark-mode');
+        darkToggle.textContent = document.body.classList.contains('dark-mode') ? '☀️' : '🌙';
+    });
+</script>
+
   <footer>
     <p>&copy; 2025 Tomada de Decisão Sustentável</p>
   </footer>
