--- a/agradecimento.html
+++ b/agradecimento.html
@@ -1,36 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Obrigado!</title>
-  <link rel="stylesheet" href="estilo.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Obrigado | Tomada de Decisão Sustentável</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="estilo.css" />
 </head>
 
 <body>
-  <header>
-    <h1>Obrigado pelo seu interesse! 🌱</h1>
-  </header>
 
-  <main style="text-align:center; padding:40px;">
-    <p>Recebemos seu cadastro de parceria. Entraremos em contato em breve!</p>
+<header>
+  <h1>Tomada de Decisão Sustentável</h1>
+  <p class="slogan">Educar hoje para transformar o amanhã.</p>
+
+  <button id="dark-toggle" aria-label="Alternar modo claro/escuro">🌙</button>
+
+  <nav>
+    <div class="menu-toggle" id="menu-toggle" aria-label="Toggle menu" aria-expanded="false" role="button" tabindex="0">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul id="menu">
+      <li><a href="index.html" class="menu-link">Início</a></li>
+      <li><a href="index.html#sobre" class="menu-link">Sobre</a></li>
+      <li><a href="index.html#jogos" class="menu-link">Jogos</a></li>
+      <li><a href="index.html#atividades" class="menu-link">Atividades</a></li>
+      <li><a href="formulario.html" class="menu-link">Parcerias</a></li>
+      <li><a href="index.html#contato" class="menu-link">Contato</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main>
+  <section class="secao visible" style="text-align:center;">
+    <h2>✅ Cadastro enviado com sucesso!</h2>
+    <p>Recebemos seu cadastro de parceria.<br>Entraremos em contato em breve 🌱</p>
 
     <a href="https://tomada-de-decisao-sustentavel.github.io/Page-oficial/index.html"
-       style="
-         display:inline-block;
-         margin-top:20px;
-         padding:12px 25px;
-         background-color:#4CAF50;
-         color:#fff;
-         text-decoration:none;
-         border-radius:8px;
-       ">
+       class="botao"
+       style="display:inline-block; margin-top:25px;">
        Voltar ao Menu Inicial
     </a>
-  </main>
+  </section>
+</main>
 
-  <footer>
-    <p>&copy; 2025 Tomada de Decisão Sustentável</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 Tomada de Decisão Sustentável. Todos os direitos reservados.</p>
+</footer>
+
+<script>
+  const menuToggle = document.getElementById('menu-toggle');
+  const menu = document.getElementById('menu');
+
+  menuToggle.addEventListener('click', () => {
+    const expanded = menuToggle.getAttribute('aria-expanded') === 'true';
+    menuToggle.setAttribute('aria-expanded', !expanded);
+    menu.classList.toggle('show');
+    menuToggle.classList.toggle('active');
+  });
+
+  menuToggle.addEventListener('keydown', (e) => {
+    if (e.key === 'Enter' || e.key === ' ') {
+      e.preventDefault();
+      menuToggle.click();
+    }
+  });
+
+  const darkToggle = document.getElementById('dark-toggle');
+  darkToggle.addEventListener('click', () => {
+    document.body.classList.toggle('dark-mode');
+    darkToggle.textContent = document.body.classList.contains('dark-mode') ? '☀️' : '🌙';
+  });
+</script>
+
 </body>
 </html>
