--- a/osnaturais.html
+++ b/osnaturais.html
@@ -104,6 +104,68 @@ Onde ele passa, deixa uma energia calma, cheia de paz e cuidado.
 Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbolo da ternura e do respeito por todas as formas de vida.🦚🍄
       </p>
     </div>
+<div class="natural-card">
+  <img src="estrela.png" alt="Estrela">
+  <h3>⭐ Estrela</h3>
+  <p>
+    🌌 Estrela é uma menina reservada, de poucas palavras, mas dona de um coração enorme.
+    Sensível e profunda, ela encontra na pintura a sua forma mais verdadeira de expressão.
+
+    Apaixonada pelas estrelas e constelações, passa horas observando o céu e imaginando
+    histórias escondidas entre os pontos de luz. Muito inteligente e observadora,
+    possui um jeito único e peculiar de lidar com o mundo.
+
+    Humilde e sincera, Estrela está sempre em busca da felicidade, acreditando que,
+    assim como no céu noturno, as coisas mais bonitas nem sempre fazem barulho — elas apenas brilham. ✨🎨
+  </p>
+</div>
+<div class="natural-card">
+  <img src="sel-mar.png" alt="Sel-Mar">
+  <h3>🌊✨ Sel-Mar</h3>
+  <p>
+    🌤️ Sel-Mar, também conhecida como Céu e Mar, é o coração da sabedoria que nasce da experiência.
+    Acolhedora e generosa, ela ama o próximo mesmo quando esse amor não é retribuído.
+
+    Sempre dedicada, encontra na costura sua maior expressão artística.
+    Com as próprias mãos, cria trabalhos cheios de carinho, cuidado e significado.
+
+    Artista por essência, ama fazer lives, espalhar alegria, risadas e conforto.
+    Sel-Mar é como o céu que ilumina e o mar que abraça, trazendo ternura, paz e energia boa a todos ao seu redor. 🧵💙
+  </p>
+</div>
+<div class="natural-card">
+  <img src="gorrinho.png" alt="Gorrinho">
+  <h3>🧢💜 Gorrinho</h3>
+  <p>
+    🕊️ Gorrinho é um verdadeiro pacificador, sempre disposto a conversar, negociar e aproximar pessoas.
+    Comunicativo e carismático, tem facilidade com as palavras e com o coração.
+
+    Mesmo ficando um pouco nervoso às vezes, ele carrega dentro de si uma bondade enorme.
+    Sempre com seu gorrinho amarelo e roupas roxas, anda acompanhado de um ursinho roxo,
+    presente especial de sua mamãe, símbolo de carinho e proteção.
+
+    Ama fazer lives, compartilhar novidades e sonha em ser repórter ou famoso,
+    mas nunca esquece de ajudar o próximo e jamais diminui ninguém.
+    Para Gorrinho, a verdadeira paz começa no respeito. 🎙️🤝
+  </p>
+</div>
+<div class="natural-card">
+  <img src="limpinho.png" alt="Limpinho">
+  <h3>🧹💚 Limpinho</h3>
+  <p>
+    🌱 Limpinho é simples no jeito, mas gigante no coração.
+    Sempre amigo de todos, carrega uma ternura que transforma qualquer ambiente.
+
+    Ele faz o possível para deixar tudo bem feito, e quando não consegue,
+    entrega o melhor de si, sempre com muito amor envolvido.
+    Está sempre disponível para ajudar, sem esperar nada em troca.
+
+    Com sua vassourinha alegre, Limpinho não limpa apenas espaços,
+    mas espalha cuidado, organização e leveza por onde passa.
+    Ele mostra que a verdadeira riqueza está na bondade e na dedicação diária. 💚✨
+  </p>
+</div>
+
 
   </div>
 </section>
@@ -138,6 +200,7 @@ Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbol
 
 </body>
 </html>
+
 
 
 
