--- a/osnaturais.html
+++ b/osnaturais.html
@@ -1,205 +1,97 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Os Naturais</title>
+<div class="Osnaturais-grid">
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="estilo.css" />
-</head>
-<body>
-
-<header>
-    <h1>Tomada de Decisão Sustentável</h1>
-    <p class="slogan">Educar hoje para transformar o amanhã.</p>
-
-    <button id="dark-toggle" aria-label="Alternar modo claro/escuro">🌙</button>
-
-    <nav>
-        <div class="menu-toggle" id="menu-toggle" aria-label="Toggle menu" aria-expanded="false" role="button" tabindex="0">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <ul id="menu">
-            <li><a href="index.html" class="menu-link">Início</a></li>
-            <li><a href="index.html#sobre" class="menu-link">Sobre</a></li>
-            <li><a href="formulario.html" class="menu-link active">Osnaturais</a></li>
-            <li><a href="index.html#jogos" class="menu-link">Jogos</a></li>
-            <li><a href="index.html#atividades" class="menu-link">Atividades</a></li>
-            <li><a href="index.html#contato" class="menu-link">Contato</a></li>
-        </ul>
-    </nav>
-</header>
-    <section class="secao visible">
-  <h2>🌿 Os Naturais</h2>
-  <p>
-    Os Naturais são nossos amiguinhos da natureza 🌱  
-    Cada um representa valores importantes para ajudar o planeta e as pessoas
-    a tomarem decisões mais sustentáveis.
-  </p>
-
-  <div class="Osnaturais-grid">
-
+    <!-- ESTRELA -->
     <div class="natural-card">
-      <img src="santim.png" alt="Santim">
-      <h3>🌟 Santim - líder falastrão sorridente</h3>
-      <p>
-       
-
-🌿 Santim é um menino falastrão, doidim e cheio de energia! Muito alegre, ele chega espalhando sua energia bela e positiva, alegrando todos ao seu redor. Com seu jeitinho engraçadinho e espontâneo, conquista fácil quem o conhece.
-
-Apesar de ser divertido e brincalhão, Santim é muito amoroso e tem um coração enorme. Ele não gosta de injustiça e, quando vê algo errado, não pensa duas vezes: fica bravo, toma atitude e defende o que é certo, sempre buscando ajudar o próximo.
-
-Santim representa a coragem, a empatia e a alegria de fazer o bem, mostrando que cuidar da natureza e das pessoas também pode ser feito com sorriso, energia e união 🌱💚
-      </p>
+        <img src="estrela.png" alt="Estrela">
+        <h3>⭐ Estrela</h3>
+        <p>
+            Estrela é uma menina reservada, mas com um coração enorme.
+            Ama pinturas, estrelas e constelações, criando quadros maravilhosos.
+            Muito inteligente, tem um jeitinho único de ser, sempre humilde
+            e em constante busca pela felicidade.
+        </p>
     </div>
 
+    <!-- SEL-MAR -->
     <div class="natural-card">
-      <img src="bekka.png" alt="Bekka">
-      <h3>🐰 Bekka – A Guardiã do Carinho e dos Animais</h3>
-      <p>
-        
-
-🪴 Bekka é uma menina doce, carinhosa e cheia de amor, que tem um dom especial: tocar corações com sua presença.
-Amante dos animais e de tudo que é fofo, ela enxerga beleza nos pequenos gestos e nas formas mais simples da vida.
-
-Verdadeira e sempre amiga de todos, Bekka carrega o verdadeiro significado do carinho e do amor, espalhando afeto por onde passa.
-Ela cuida, protege e respeita cada ser vivo, tratando todos com gentileza e atenção.
-
-Os animais a amam naturalmente, pois sentem sua energia pura e acolhedora.
-Sempre alegre e vibrante, Bekka está sempre disponível para ajudar, ouvir e abraçar — seja uma pessoa, um amigo ou um bichinho que precise de cuidado.
-
-Ela nos ensina que amar é um ato de proteção, e que a ternura também é uma grande força para cuidar do mundo.🐿️🪴
-      </p>
+        <img src="sel-mar.png" alt="Sel-Mar">
+        <h3>🌊 Sel-Mar</h3>
+        <p>
+            Sel-Mar, também conhecida como Céu e Mar, é acolhedora e sábia.
+            Ama costurar, criar arte com as mãos e fazer lives para espalhar alegria.
+            É luz como o céu e abraço como o mar.
+        </p>
     </div>
 
-<div class="natural-card">
-  <img src="duarte.png" alt="Du-Arte">
-  <h3>🎨 Du-Arte</h3>
-  <p>
-    🖍️ Du-Arte é um menino feliz, esforçado e inteligente, que enxerga o mundo como uma grande obra de arte.
-    Seu sorriso nasce da criatividade e seu coração pulsa no ritmo da vida.
-
-    Ele ama a arte em todas as suas formas — a pintura, as cores, as histórias antigas e os saberes que atravessam gerações.
-    É defensor de tudo que é natural, verdadeiro e antigo, pois acredita que o passado guarda lições preciosas para o futuro.
-
-    Mesmo jovem, Du-Arte carrega uma sabedoria rara, aprendida ao observar a natureza, respeitar o tempo das coisas e valorizar cada detalhe do mundo ao seu redor.
-
-    Com seu espírito criativo, ele transforma cuidado em beleza e conhecimento em inspiração, mostrando que arte também é uma forma de proteger a vida. 🐛🧩
-  </p>
-</div>
-
+    <!-- GORRINHO -->
     <div class="natural-card">
-      <img src="dramastico.png" alt="Dramástico">
-      <h3>🎭 Dramástico</h3>
-      <p>
-        🪼Este rapaizinho é o Guardião da Natureza, um ser puro e sensível, que enxerga beleza em tudo que floresce.
-Seu coração vibra com as cores das plantas, o cheiro da terra molhada e o brilho das pequenas criaturas que habitam o mundo.
-
-Ele ama tudo que é belo, tudo que cresce e tudo que exala amor verdadeiro.
-Onde ele passa, deixa uma energia calma, cheia de paz e cuidado.
-
-Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbolo da ternura e do respeito por todas as formas de vida.🦚🍄
-      </p>
+        <img src="gorrinho.png" alt="Gorrinho">
+        <h3>🧢 Gorrinho</h3>
+        <p>
+            Gorrinho é o pacificador do grupo.
+            Comunicativo e sonhador, ama falar de novidades em suas lives.
+            Sempre com seu gorrinho amarelo e o ursinho roxo que ganhou da mamãe,
+            espalha paz e respeito por onde passa.
+        </p>
     </div>
-<div class="natural-card">
-  <img src="estrela.png" alt="Estrela">
-  <h3>⭐ Estrela</h3>
-  <p>
-    🌌 Estrela é uma menina reservada, de poucas palavras, mas dona de um coração enorme.
-    Sensível e profunda, ela encontra na pintura a sua forma mais verdadeira de expressão.
 
-    Apaixonada pelas estrelas e constelações, passa horas observando o céu e imaginando
-    histórias escondidas entre os pontos de luz. Muito inteligente e observadora,
-    possui um jeito único e peculiar de lidar com o mundo.
+    <!-- LIMPINHO -->
+    <div class="natural-card">
+        <img src="limpinho.png" alt="Limpinho">
+        <h3>🧹 Limpinho</h3>
+        <p>
+            Limpinho pode parecer simples, mas carrega uma ternura enorme no coração.
+            Sempre disposto a ajudar, faz tudo com amor, dedicação
+            e sua inseparável vassourinha alegre.
+        </p>
+    </div>
 
-    Humilde e sincera, Estrela está sempre em busca da felicidade, acreditando que,
-    assim como no céu noturno, as coisas mais bonitas nem sempre fazem barulho — elas apenas brilham. ✨🎨
-  </p>
+    <!-- DU-ARTE -->
+    <div class="natural-card">
+        <img src="du-arte.png" alt="Du-Arte">
+        <h3>🎨 Du-Arte</h3>
+        <p>
+            Du-Arte vê o mundo como uma grande obra de arte.
+            Ama pintura, histórias antigas e a natureza.
+            Jovem, mas sábio, transforma cuidado em beleza
+            e conhecimento em inspiração.
+        </p>
+    </div>
+
+    <!-- PERSONAGEM 6 -->
+    <div class="natural-card">
+        <img src="personagem6.png" alt="Personagem Natural">
+        <h3>🌱 Aurora</h3>
+        <p>
+            Aurora representa o recomeço.
+            Sempre otimista, acredita que cada dia é uma nova chance
+            de cuidar da natureza e espalhar esperança.
+        </p>
+    </div>
+
+    <!-- PERSONAGEM 7 -->
+    <div class="natural-card">
+        <img src="personagem7.png" alt="Personagem Natural">
+        <h3>🔥 Brilho</h3>
+        <p>
+            Brilho é energia pura.
+            Incentiva todos a acreditarem em si mesmos,
+            usando sua força para proteger e iluminar o caminho dos amigos.
+        </p>
+    </div>
+
+    <!-- PERSONAGEM 8 -->
+    <div class="natural-card">
+        <img src="personagem8.png" alt="Personagem Natural">
+        <h3>🍃 Vento</h3>
+        <p>
+            Vento é livre, curioso e observador.
+            Leva mensagens de equilíbrio, respeito e leveza,
+            mostrando que pequenas ações fazem grande diferença.
+        </p>
+    </div>
+
 </div>
-<div class="natural-card">
-  <img src="sel-mar.png" alt="Sel-Mar">
-  <h3>🌊✨ Sel-Mar</h3>
-  <p>
-    🌤️ Sel-Mar, também conhecida como Céu e Mar, é o coração da sabedoria que nasce da experiência.
-    Acolhedora e generosa, ela ama o próximo mesmo quando esse amor não é retribuído.
-
-    Sempre dedicada, encontra na costura sua maior expressão artística.
-    Com as próprias mãos, cria trabalhos cheios de carinho, cuidado e significado.
-
-    Artista por essência, ama fazer lives, espalhar alegria, risadas e conforto.
-    Sel-Mar é como o céu que ilumina e o mar que abraça, trazendo ternura, paz e energia boa a todos ao seu redor. 🧵💙
-  </p>
-</div>
-<div class="natural-card">
-  <img src="gorrinho.png" alt="Gorrinho">
-  <h3>🧢💜 Gorrinho</h3>
-  <p>
-    🕊️ Gorrinho é um verdadeiro pacificador, sempre disposto a conversar, negociar e aproximar pessoas.
-    Comunicativo e carismático, tem facilidade com as palavras e com o coração.
-
-    Mesmo ficando um pouco nervoso às vezes, ele carrega dentro de si uma bondade enorme.
-    Sempre com seu gorrinho amarelo e roupas roxas, anda acompanhado de um ursinho roxo,
-    presente especial de sua mamãe, símbolo de carinho e proteção.
-
-    Ama fazer lives, compartilhar novidades e sonha em ser repórter ou famoso,
-    mas nunca esquece de ajudar o próximo e jamais diminui ninguém.
-    Para Gorrinho, a verdadeira paz começa no respeito. 🎙️🤝
-  </p>
-</div>
-<div class="natural-card">
-  <img src="limpinho.png" alt="Limpinho">
-  <h3>🧹💚 Limpinho</h3>
-  <p>
-    🌱 Limpinho é simples no jeito, mas gigante no coração.
-    Sempre amigo de todos, carrega uma ternura que transforma qualquer ambiente.
-
-    Ele faz o possível para deixar tudo bem feito, e quando não consegue,
-    entrega o melhor de si, sempre com muito amor envolvido.
-    Está sempre disponível para ajudar, sem esperar nada em troca.
-
-    Com sua vassourinha alegre, Limpinho não limpa apenas espaços,
-    mas espalha cuidado, organização e leveza por onde passa.
-    Ele mostra que a verdadeira riqueza está na bondade e na dedicação diária. 💚✨
-  </p>
-</div>
-
-
-  </div>
-</section>
-<footer>
-    <p>&copy; 2025 Tomada de Decisão Sustentável. Todos os direitos reservados.</p>
-</footer>
-
-<script>
-    const menuToggle = document.getElementById('menu-toggle');
-    const menu = document.getElementById('menu');
-
-    menuToggle.addEventListener('click', () => {
-        const expanded = menuToggle.getAttribute('aria-expanded') === 'true';
-        menuToggle.setAttribute('aria-expanded', !expanded);
-        menu.classList.toggle('show');
-        menuToggle.classList.toggle('active');
-    });
-
-    menuToggle.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter' || e.key === ' ') {
-            e.preventDefault();
-            menuToggle.click();
-        }
-    });
-
-    const darkToggle = document.getElementById('dark-toggle');
-    darkToggle.addEventListener('click', () => {
-        document.body.classList.toggle('dark-mode');
-        darkToggle.textContent = document.body.classList.contains('dark-mode') ? '☀️' : '🌙';
-    });
-</script>
-
-</body>
-</html>
 
 
 
