--- a/osnaturais.html
+++ b/osnaturais.html
@@ -1,5 +1,102 @@
-<div class="Osnaturais-grid">
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Os Naturais</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="estilo.css" />
+</head>
+
+<body>
+
+<header>
+    <h1>Tomada de Decisão Sustentável</h1>
+    <p class="slogan">Educar hoje para transformar o amanhã.</p>
+
+    <button id="dark-toggle" aria-label="Alternar modo claro/escuro">🌙</button>
+
+    <nav>
+        <div class="menu-toggle" id="menu-toggle" aria-label="Toggle menu" aria-expanded="false" role="button" tabindex="0">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
+        <ul id="menu">
+            <li><a href="index.html" class="menu-link">Início</a></li>
+            <li><a href="index.html#sobre" class="menu-link">Sobre</a></li>
+            <li><a href="formulario.html" class="menu-link active">Osnaturais</a></li>
+            <li><a href="index.html#jogos" class="menu-link">Jogos</a></li>
+            <li><a href="index.html#atividades" class="menu-link">Atividades</a></li>
+            <li><a href="index.html#contato" class="menu-link">Contato</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section class="secao visible">
+    <h2>🌿 Os Naturais</h2>
+
+    <p>
+        Os Naturais são nossos amiguinhos da natureza 🌱
+        Cada um representa valores importantes para ajudar o planeta
+        e as pessoas a tomarem decisões mais sustentáveis.
+    </p>
+
+    <div class="Osnaturais-grid">
+        
+        <!-- Santim -->
+        <div class="natural-card">
+            <img src="santim.png" alt="Santim">
+            <h3>🌟 Santim - líder falastrão sorridente</h3>
+            <p>
+                🌿 Santim é um menino falastrão, doidim e cheio de energia!
+                Muito alegre, ele chega espalhando sua energia bela e positiva,
+                alegrando todos ao seu redor.
+                ...
+                Santim representa a coragem, a empatia e a alegria de fazer o bem 🌱💚
+            </p>
+        </div>
+
+        <div class="natural-card">
+            <img src="bekka.png" alt="Bekka">
+            <h3>🐰 Bekka – A Guardiã do Carinho e dos Animais</h3>
+            <p>
+                🪴 Bekka é uma menina doce, carinhosa e cheia de amor...
+                Ela nos ensina que amar é um ato de proteção. 🐿️🪴
+            </p>
+        </div>
+ <!-- bekka-->        
+         <div class="natural-card">
+            <img src="duarte.png" alt="Du-Arte">
+            <h3>🎨 Du-Arte</h3>
+            <p>
+                🖍️ Du-Arte é um menino feliz, esforçado e inteligente...
+                mostrando que arte também é uma forma de proteger a vida. 🐛🧩
+            </p>
+        </div>
+
+        <!-- Du-arte -->    
+        <div class="natural-card">
+            <img src="duarte.png" alt="Du-Arte">
+            <h3>🎨 Du-Arte</h3>
+            <p>
+                🖍️ Du-Arte é um menino feliz, esforçado e inteligente...
+                mostrando que arte também é uma forma de proteger a vida. 🐛🧩
+            </p>
+        </div>
+
+     <!-- dramastico -->      
+           <div class="natural-card">
+            <img src="dramastico.png" alt="Dramástico">
+            <h3>🎭 Dramástico</h3>
+            <p>
+                🪼 Este rapaizinho é o Guardião da Natureza...
+                símbolo da ternura e do respeito por todas as formas de vida. 🦚🍄
+            </p>
+        </div>
+        
     <!-- ESTRELA -->
     <div class="natural-card">
         <img src="estrela.png" alt="Estrela">
@@ -46,52 +143,7 @@
         </p>
     </div>
 
-    <!-- DU-ARTE -->
-    <div class="natural-card">
-        <img src="du-arte.png" alt="Du-Arte">
-        <h3>🎨 Du-Arte</h3>
-        <p>
-            Du-Arte vê o mundo como uma grande obra de arte.
-            Ama pintura, histórias antigas e a natureza.
-            Jovem, mas sábio, transforma cuidado em beleza
-            e conhecimento em inspiração.
-        </p>
-    </div>
 
-    <!-- PERSONAGEM 6 -->
-    <div class="natural-card">
-        <img src="personagem6.png" alt="Personagem Natural">
-        <h3>🌱 Aurora</h3>
-        <p>
-            Aurora representa o recomeço.
-            Sempre otimista, acredita que cada dia é uma nova chance
-            de cuidar da natureza e espalhar esperança.
-        </p>
-    </div>
-
-    <!-- PERSONAGEM 7 -->
-    <div class="natural-card">
-        <img src="personagem7.png" alt="Personagem Natural">
-        <h3>🔥 Brilho</h3>
-        <p>
-            Brilho é energia pura.
-            Incentiva todos a acreditarem em si mesmos,
-            usando sua força para proteger e iluminar o caminho dos amigos.
-        </p>
-    </div>
-
-    <!-- PERSONAGEM 8 -->
-    <div class="natural-card">
-        <img src="personagem8.png" alt="Personagem Natural">
-        <h3>🍃 Vento</h3>
-        <p>
-            Vento é livre, curioso e observador.
-            Leva mensagens de equilíbrio, respeito e leveza,
-            mostrando que pequenas ações fazem grande diferença.
-        </p>
-    </div>
-
-</div>
 
 
 
