--- a/osnaturais.html
+++ b/osnaturais.html
@@ -102,6 +102,42 @@ Onde ele passa, deixa uma energia calma, cheia de paz e cuidado.
 Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbolo da ternura e do respeito por todas as formas de vida.🦚🍄
       </p>
     </div>
+        
+<div class="natural-card">
+            <img src="estrela.png" alt="Estrela">
+            <h3>⭐ Estrela</h3>
+            <p>
+                🌌 Estrela é uma menina reservada...
+                as coisas mais bonitas apenas brilham. ✨🎨
+            </p>
+        </div>
+
+        <div class="natural-card">
+            <img src="sel-mar.png" alt="Sel-Mar">
+            <h3>🌊✨ Sel-Mar</h3>
+            <p>
+                🌤️ Sel-Mar, também conhecida como Céu e Mar...
+                trazendo ternura, paz e energia boa. 🧵💙
+            </p>
+        </div>
+
+        <div class="natural-card">
+            <img src="gorrinho.png" alt="Gorrinho">
+            <h3>🧢💜 Gorrinho</h3>
+            <p>
+                🕊️ Gorrinho é um verdadeiro pacificador...
+                Para Gorrinho, a verdadeira paz começa no respeito. 🎙️🤝
+            </p>
+        </div>
+
+        <div class="natural-card">
+            <img src="limpinho.png" alt="Limpinho">
+            <h3>🧹💚 Limpinho</h3>
+            <p>
+                🌱 Limpinho é simples no jeito, mas gigante no coração...
+                Ele mostra que a verdadeira riqueza está na bondade. 💚✨
+            </p>
+        </div>
 
   </div>
 </section>
@@ -136,4 +172,5 @@ Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbol
 
 </body>
 </html>
+
 
