--- a/osnaturais.html
+++ b/osnaturais.html
@@ -107,8 +107,11 @@ Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbol
             <img src="estrela.png" alt="Estrela">
             <h3>⭐ Estrela</h3>
             <p>
-                🌌 Estrela é uma menina reservada...
-                as coisas mais bonitas apenas brilham. ✨🎨
+                🌌 Estrela é uma menina de poucas palavras, reservada à primeira vista, mas dona de um coração enorme. Sensível e profunda, ela encontra na arte a melhor forma de se expressar. A pintura é sua grande paixão, e através dos quadros que cria, Estrela consegue transformar sentimentos, sonhos e pensamentos em verdadeiras obras cheias de significado.
+
+Fascinada pelo céu, ela ama as estrelas e as constelações, passando horas observando e imaginando histórias escondidas entre os pontos de luz. Muito inteligente e observadora, Estrela possui um jeito peculiar de lidar com o mundo — único, autêntico e sincero.
+
+Apesar de sua personalidade discreta, ela é humilde e carrega dentro de si uma busca constante pela felicidade, acreditando que a beleza da vida está nos pequenos detalhes, assim como nas estrelas que brilham silenciosamente no céu.✨🎨
             </p>
         </div>
 
@@ -116,8 +119,15 @@ Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbol
             <img src="sel-mar.png" alt="Sel-Mar">
             <h3>🌊✨ Sel-Mar</h3>
             <p>
-                🌤️ Sel-Mar, também conhecida como Céu e Mar...
-                trazendo ternura, paz e energia boa. 🧵💙
+                🌤️ Sel-Mar, também conhecida como Céu e Mar, é o coração da sabedoria que nasce da experiência. Acolhedora por natureza, ela ama o próximo de forma genuína, mesmo quando esse amor não é retribuído ou quando lhe causam dor. Seu coração é amplo, paciente e cheio de compreensão.
+
+Sempre esforçada e dedicada, Sel-Mar encontra na costura sua forma mais pura de expressão. Com as próprias mãos, cria trabalhos belíssimos, carregados de cuidado, carinho e significado. Cada ponto costurado é um gesto de amor e entrega.
+
+Artista por essência, ela ama fazer lives, compartilhar sua arte e espalhar alegria. Suas risadas são leves e contagiantes, capazes de aquecer quem está por perto, assim como suas criações manuais, que transmitem conforto e afeto.
+
+Sel-Mar é, ao mesmo tempo, céu e mar:
+o céu, cheio de luzes, energia boa e esperança;
+o mar, que acolhe, abraça e envolve com ternura, trazendo paz ao coração de quem se aproxima. 🧵💙
             </p>
         </div>
 
@@ -125,8 +135,14 @@ Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbol
             <img src="gorrinho.png" alt="Gorrinho">
             <h3>🧢💜 Gorrinho</h3>
             <p>
-                🕊️ Gorrinho é um verdadeiro pacificador...
-                Para Gorrinho, a verdadeira paz começa no respeito. 🎙️🤝
+                🕊️ 
+Gorrinho é um verdadeiro pacificador, aquele que sempre busca o diálogo e tenta resolver tudo na base da conversa. Comunicativo e muito bom com as palavras, ele tem o dom de negociar, aproximar pessoas e acalmar situações difíceis. Às vezes pode até ficar um pouquinho nervoso, mas isso nunca apaga o que ele tem de maior: um coração gigante.
+
+Sempre reconhecido por seu gorrinho amarelo e suas roupas roxas, Gorrinho carrega consigo um ursinho roxo muito especial, presente que ganhou de sua mamãe e que simboliza carinho, proteção e amor. Esse detalhe o representa como a verdadeira “carinha da paz”.
+
+Ele ama fazer lives, conversar, compartilhar novidades e estar em contato com as pessoas. Sonhador, deseja um dia ser repórter ou se tornar famoso, não por vaidade, mas para dar voz, espalhar boas mensagens e ajudar ainda mais gente.
+
+Mesmo com seus sonhos grandes, Gorrinho nunca deixa de ser humilde. Ele sempre estende a mão ao próximo, valoriza todos ao seu redor e jamais diminui ninguém, acreditando que o respeito e a empatia são as maiores formas de grandeza.🎙️🤝
             </p>
         </div>
 
@@ -134,8 +150,13 @@ Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbol
             <img src="limpinho.png" alt="Limpinho">
             <h3>🧹💚 Limpinho</h3>
             <p>
-                🌱 Limpinho é simples no jeito, mas gigante no coração...
-                Ele mostra que a verdadeira riqueza está na bondade. 💚✨
+                🌱 À primeira vista, Limpinho pode até ser confundido com alguém simples demais, quase invisível aos olhos apressados do mundo. Mas quem se permite conhecê-lo descobre um rapazinho de coração imenso, cheio de ternura, bondade e humanidade.
+
+Amigo de todos, Limpinho é aquele que sempre tenta deixar tudo bem feito. E quando não consegue alcançar a perfeição, entrega o melhor de si, trabalhando até o seu limite, sempre com muito amor envolvido. Para ele, o valor não está no reconhecimento, mas na intenção e no cuidado colocados em cada gesto.
+
+Sempre disponível para ajudar, ele não mede esforços quando alguém precisa. Com sua vassourinha alegre, Limpinho não limpa apenas espaços — ele organiza caminhos, afasta o peso do dia e espalha leveza por onde passa.
+
+Seu maior talento é fazer do simples algo especial, mostrando que a verdadeira riqueza está na bondade, na dedicação e no amor ao próximo. 💚✨
             </p>
         </div>
 
@@ -172,5 +193,6 @@ Sempre carrega seu coelhinho branco — seu companheiro inseparável — símbol
 
 </body>
 </html>
+
 
 
