--- a/osnaturais.html
+++ b/osnaturais.html
@@ -159,7 +159,20 @@ Sempre disponível para ajudar, ele não mede esforços quando alguém precisa. 
 Seu maior talento é fazer do simples algo especial, mostrando que a verdadeira riqueza está na bondade, na dedicação e no amor ao próximo. 💚✨
             </p>
         </div>
+        
+        <div class="natural-card">
+            <img src="ternura.png" alt="ternura">
+            <h3>🦚Ternura</h3>
+            <p>
+               🪽Ternura  é uma menina sonhadora e atenciosa.
+Apesar de pequena, possui um coração grande e um jeito calmo de lidar com tudo ao seu redor. É esforçada, dedicada e capaz, sempre buscando fazer o seu melhor.
 
+Tem uma personalidade leve, tranquila e acolhedora. Costuma observar antes de agir e se preocupa com as pessoas, demonstrando respeito e cuidado com o próximo.
+
+Ternura transmite paz por onde passa. Sua presença é suave e inspiradora, trazendo sentimentos de amor, equilíbrio e esperança.🪶🕊️
+            </p>
+        </div>
+        
   </div>
 </section>
 <footer>
@@ -193,6 +206,7 @@ Seu maior talento é fazer do simples algo especial, mostrando que a verdadeira 
 
 </body>
 </html>
+
 
 
 
